Fix spacing and overlap

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 html {
   box-sizing: border-box;
   font-family: "Open Sans", sans-serif;
+  line-height: 1.4;
 }
 
 *, *::before, *::after {
@@ -20,18 +21,20 @@ body {
   max-height: 500px;
   position: relative;
   align-items: center;
+  overflow: hidden;
 }
 
 .content {
-  display: block;
+  width: 95%;
   max-width: 50em;
   position: absolute;
-  bottom: 0;
+  bottom: 1rem;
   left: 50%;
   transform: translateX(-50%);
 }
 
 h2 {
+  display: inline;
   margin: 0;
   font-size: 4rem;
   color: #fff;
@@ -39,7 +42,8 @@ h2 {
 }
 
 p {
-  margin: 0;
+  margin: 1rem 0;
+  line-height: 1.5;
   font-size: 2rem;
   font-style: italic;
 }
